--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,1 +1,18 @@
+name: 'Welcome New Contributors'
 
+on:
+  issues:
+    types: [opened]
+  pull_request_target:
+    types: [opened]
+
+jobs:
+  welcome-new-contributor:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Greet the contributor'
+        uses: hindu-muppala/learn-by-doing-app@v.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          issue-message: 'Hello there, thanks for opening your first issue. We welcome you to the community!'
+          pr-message: 'Hello there, thanks for opening your first Pull Request. Someone will review it soon.'
