--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -13,6 +13,6 @@ jobs:
       - name: 'Greet the contributor'
         #uses: hindu-muppala/learn-by-doing-app@v.0
         with:
-          #token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           issue-message: 'Hello there, thanks for opening your first issue. We welcome you to the community!'
           pr-message: 'Hello there, thanks for opening your first Pull Request. Someone will review it soon.'
