--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 'Greet the contributor'
-        uses: actions/checkout@v2
+        uses: hindu-muppala/learn-by-doing-app@v1
         with:
-          token: ${{ secrets.git_token }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           issue-message: 'Hello there, thanks for opening your first issue. We welcome you to the community!'
           pr-message: 'Hello there, thanks for opening your first Pull Request. Someone will review it soon.'
