--- a/.github/greeting.yml
+++ b/.github/greeting.yml
@@ -1,24 +1,17 @@
-name: Greet First-Time Contributor
 
+name: "GreetContributor"
 on:
   pull_request:
-    types:
-      - opened
-
-jobs:
-  greet_contributor:
-    runs-on: ubuntu-latest
+    types: [opened,synchronize]
     
+jobs:
+  GreetCommitter:    
+    runs-on: ubuntu-latest
     steps:
-      - name: Check if first-time contributor
-        id: check_contributor
-        uses: actions/first-interaction@v1
-        
-      - name: Greet first-time contributor
-        if: steps.check_contributor.outputs.first_interaction
-        run: |
-          echo "Greetings, esteemed first-time contributor!"
-          echo "We are thrilled to have you join our community."
-          echo "Your contributions are highly valued and appreciated."
-          echo "If you have any questions or need assistance, feel free to ask."
-          echo "We look forward to seeing your amazing work!"
+    - name: "Greet contributor"
+      uses: ibakshay/greet-contributors-action@v3
+      env: 
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with: 
+        content: "<Add your custom content here>"
+       #default content is "Thank you for taking your time and effort for your contribution, we truly value it. :tada:" 
