--- a/.github/greeting.yml
+++ b/.github/greeting.yml
@@ -1,16 +1,17 @@
 
-name: "GreetContributor"
-on:
-  pull_request:
-    types: [opened,synchronize]
-    
+name: Greetings
+
+on: [pull_request_target, issues]
+
 jobs:
-  GreetCommitter:    
+  greetings:
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
+      pull-requests: write
     steps:
-    - name: "Greet contributor"
-      uses: ibakshay/greet-contributors-action@v3
-      env: 
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with: 
-        content: "Thank you for taking your time and effort for your contribution, we truly value it"
+      - uses: actions/first-interaction@v1
+        with:
+          repo-token: ${{secrets.GITHUB_TOKEN}}
+          issue-message: "We appreciate you pointing us to the problem, and as soon as time allows, we will look into it. Thank you!"
+          pr-message: "We appreciate you creating your first pull request and look forward to reviewing your future contributions."
